compiler/testData/diagnostics/tests/protocols/defaults.kt

protocol interface Master {
    fun foo(x: String) = <!UNSUPPORTED!>x<!>
    fun bam(x: String = <!UNSUPPORTED!>"KOKOKO"<!>)
}

